Ensure that dialog is shown on OOBE screen

Previous change (https://chromium-review.googlesource.com/c/chromium/src/+/1144581) allowed the confirmation dialog to be shown on sign on screen,
however on OOBE screen the dialog needs to be set to be on top of everything else.

Bug: 867478
Change-Id: Ie81e5ad3926c16860f87fb100eb4c0fe7bcba88b
Test: Manual
Reviewed-on: https://chromium-review.googlesource.com/1152329
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Commit-Queue: Sara Kato <sarakato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581088}
Former-commit-id: 6e560fa7a50e529f4fed8adecd0e72bbb30b16e9